Fixed small layout issues

--- a/src/components/dumb/BasicPaginator/BasicPaginator.scss
+++ b/src/components/dumb/BasicPaginator/BasicPaginator.scss
@@ -1,4 +1,5 @@
 .BasicPaginator {
-  width: 100%;
   height: 30px;
+  margin-top: 5px;
+  padding: 0 10px;
 }
