--- a/src/components/smart/Basic/BasicContainer.scss
+++ b/src/components/smart/Basic/BasicContainer.scss
@@ -2,4 +2,6 @@
   height: 100%;
   position: relative;
   overflow: auto;
+  display: flex;
+  flex-direction: column;
 }
